Bump com.amazonaws:aws-java-sdk-bom from 1.11.1000 to 1.12.748 in /gp2gp-translator (#637)
* Bump com.amazonaws:aws-java-sdk-bom in /gp2gp-translator

Bumps [com.amazonaws:aws-java-sdk-bom](https://github.com/aws/aws-sdk-java) from 1.11.1000 to 1.12.748.
- [Changelog](https://github.com/aws/aws-sdk-java/blob/master/CHANGELOG.md)
- [Commits](https://github.com/aws/aws-sdk-java/compare/1.11.1000...1.12.748)

---
updated-dependencies:
- dependency-name: com.amazonaws:aws-java-sdk-bom
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Replace amazon namespace Exception with IllegalArgumentException

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Adrian Clay <adrian@madetech.com>